--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,13 @@
-<!DOCTYPE html><html><head><title>Cyberkonsults</title></head><body><div id='root'></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Cyberkonsults - Empowering Families in a Digital World">
+    <title>Cyberkonsults Digital Protection Online</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/index.js"></script>
+  </body>
+</html>
